Fix: scroll width jiggle on mobile 2

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -11,6 +11,7 @@
         }
         @media (min-width: 0px) and (max-width: 649px) {
             grid-template-columns: 1fr;
+            max-width: 100%;
         }
     }
      @media (min-width: 0px) and (max-width: 649px) {
